gen/STParser.java
// Generated from C:/Users/PC/Desktop/Compiler\ST.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class STParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, REAL_EXPONENT=7, FIX_POINT=8, 
		UNSIGNED_INT=9, NULL=10, ONETONINE=11, STRING_VALUE=12, WSTRING_VALUE=13, 
		PRAGMA=14, WSFULL=15, LINE_COMMENT=16, C_LINE_COMMENT=17, SINGLE_LINE_COMMENT=18, 
		AND=19, BOOL=20, CONTINUE=21, DIV=22, DO=23, END_IF=24, END_PROGRAM=25, 
		END_VAR=26, END_WHILE=27, ELSE=28, EQ=29, EXIT=30, FUNCTION=31, END_FUNCTION=32, 
		FALSE=33, GE=34, GT=35, LE=36, LT=37, IF=38, INT=39, JMP=40, MOD=41, MINUS=42, 
		NEQ=43, NOT=44, OR=45, PLUS=46, POT=47, PROGRAM=48, READ_ONLY=49, READ_WRITE=50, 
		REAL=51, STRING=52, THEN=53, TIMES=54, TRUE=55, VAR=56, VAR_INPUT=57, 
		VAR_OUTPUT=58, VAR_IN_OUT=59, VAR_ACCESS=60, VAR_GLOBAL=61, WHILE=62, 
		XOR=63, IDENTIFIER=64;
	public static final int
		RULE_goal = 0, RULE_program_declaration = 1, RULE_program_variable_declaration_block = 2, 
		RULE_function_declaration = 3, RULE_local_variable_declaration_block = 4, 
		RULE_function_variable_declaration_blocks = 5, RULE_function_variable_declaration_block = 6, 
		RULE_variable_declaration_type = 7, RULE_access_variable_declaration_block = 8, 
		RULE_variable_declaration = 9, RULE_access_variable_declaration = 10, 
		RULE_global_variable_declaration_block = 11, RULE_type_specification = 12, 
		RULE_integer_type = 13, RULE_real_type = 14, RULE_boolean_type = 15, RULE_string_type = 16, 
		RULE_statementList = 17, RULE_statement = 18, RULE_base_statement = 19, 
		RULE_if_statement = 20, RULE_else_part = 21, RULE_while_statement = 22, 
		RULE_assignment_statement = 23, RULE_exit_statement = 24, RULE_continue_statement = 25, 
		RULE_jump_statement = 26, RULE_empty_statement = 27, RULE_labeled_statement = 28, 
		RULE_expression = 29, RULE_primary_expression = 30, RULE_simple_value = 31, 
		RULE_variable = 32, RULE_identifier = 33, RULE_function_call = 34, RULE_parameter_list = 35, 
		RULE_pot = 36, RULE_mult = 37, RULE_add = 38, RULE_cmp = 39, RULE_eq = 40, 
		RULE_neg = 41, RULE_and = 42, RULE_or = 43, RULE_constant = 44, RULE_real_literal = 45, 
		RULE_integer_literal = 46, RULE_boolean_literal = 47, RULE_string_literal = 48;
	public static final String[] ruleNames = {
		"goal", "program_declaration", "program_variable_declaration_block", "function_declaration", 
		"local_variable_declaration_block", "function_variable_declaration_blocks", 
		"function_variable_declaration_block", "variable_declaration_type", "access_variable_declaration_block", 
		"variable_declaration", "access_variable_declaration", "global_variable_declaration_block", 
		"type_specification", "integer_type", "real_type", "boolean_type", "string_type", 
		"statementList", "statement", "base_statement", "if_statement", "else_part", 
		"while_statement", "assignment_statement", "exit_statement", "continue_statement", 
		"jump_statement", "empty_statement", "labeled_statement", "expression", 
		"primary_expression", "simple_value", "variable", "identifier", "function_call", 
		"parameter_list", "pot", "mult", "add", "cmp", "eq", "neg", "and", "or", 
		"constant", "real_literal", "integer_literal", "boolean_literal", "string_literal"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "':'", "','", "';'", "':='", "'('", "')'", null, null, null, "'0'", 
		null, null, null, null, null, null, null, null, "'AND'", "'BOOL'", "'CONTINUE'", 
		"'/'", "'DO'", "'END_IF'", "'END_PROGRAM'", "'END_VAR'", "'END_WHILE'", 
		"'ELSE'", "'=='", "'EXIT'", "'FUNCTION'", "'END_FUNCTION'", "'FALSE'", 
		"'>='", "'>'", "'<='", "'<'", "'IF'", "'INT'", "'JMP'", "'MOD'", "'-'", 
		"'<>'", "'NOT'", "'OR'", "'+'", "'**'", "'PROGRAM'", "'READ_ONLY'", "'READ_WRITE'", 
		"'REAL'", "'STRING'", "'THEN'", "'*'", "'TRUE'", "'VAR'", "'VAR_INPUT'", 
		"'VAR_OUTPUT'", "'VAR_IN_OUT'", "'VAR_ACCESS'", "'VAR_GLOBAL'", "'WHILE'", 
		"'XOR'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, "REAL_EXPONENT", "FIX_POINT", 
		"UNSIGNED_INT", "NULL", "ONETONINE", "STRING_VALUE", "WSTRING_VALUE", 
		"PRAGMA", "WSFULL", "LINE_COMMENT", "C_LINE_COMMENT", "SINGLE_LINE_COMMENT", 
		"AND", "BOOL", "CONTINUE", "DIV", "DO", "END_IF", "END_PROGRAM", "END_VAR", 
		"END_WHILE", "ELSE", "EQ", "EXIT", "FUNCTION", "END_FUNCTION", "FALSE", 
		"GE", "GT", "LE", "LT", "IF", "INT", "JMP", "MOD", "MINUS", "NEQ", "NOT", 
		"OR", "PLUS", "POT", "PROGRAM", "READ_ONLY", "READ_WRITE", "REAL", "STRING", 
		"THEN", "TIMES", "TRUE", "VAR", "VAR_INPUT", "VAR_OUTPUT", "VAR_IN_OUT", 
		"VAR_ACCESS", "VAR_GLOBAL", "WHILE", "XOR", "IDENTIFIER"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ST.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public STParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class GoalContext extends ParserRuleContext {
		public Program_declarationContext program_declaration() {
			return getRuleContext(Program_declarationContext.class,0);
		}
		public Global_variable_declaration_blockContext global_variable_declaration_block() {
			return getRuleContext(Global_variable_declaration_blockContext.class,0);
		}
		public List<Function_declarationContext> function_declaration() {
			return getRuleContexts(Function_declarationContext.class);
		}
		public Function_declarationContext function_declaration(int i) {
			return getRuleContext(Function_declarationContext.class,i);
		}
		public GoalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_goal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof STListener ) ((STListener)listener).enterGoal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof STListener ) ((STListener)listener).exitGoal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof STVisitor ) return ((STVisitor<? extends T>)visitor).visitGoal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GoalContext goal() throws RecognitionException {
		GoalContext _localctx = new GoalContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_goal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR_GLOBAL) {
				{
				setState(98);
				global_variable_declaration_block();
				}
			}

			setState(101);
			program_declaration();
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNCTION) {
				{
				{
				setState(102);
				function_declaration();
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Program_declarationContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(STParser.PROGRAM, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public Program_variable_declaration_blockContext program_variable_declaration_block() {
			return getRuleContext(Program_variable_declaration_blockContext.class,0);
		}
		public StatementListContext statementList() {
			return getRuleContext(StatementListContext.class,0);
		}
		public TerminalNode END_PROGRAM() { return getToken(STParser.END_PROGRAM, 0); }
		public Program_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof STListener ) ((STListener)listener).enterProgram_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof STListener ) ((STListener)listener).exitProgram_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof STVisitor ) return ((STVisitor<? extends T>)visitor).visitProgram_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Program_declarationContext program_declaration() throws RecognitionException {
		Program_declarationContext _localctx = new Program_declarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(PROGRAM);
			setState(109);
			identifier();
			setState(110);
			program_variable_declaration_block();
			setState(111);
			statementList();
			setState(112);
			match(END_PROGRAM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Program_variable_declaration_blockContext extends ParserRuleContext {
		public Access_variable_declaration_blockContext access_variable_declaration_block() {
			return getRuleContext(Access_variable_declaration_blockContext.class,0);
		}
		public Local_variable_declaration_blockContext local_variable_declaration_block() {
			return getRuleContext(Local_variable_declaration_blockContext.class,0);
		}
		public Program_variable_declaration_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program_variable_declaration_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof STListener ) ((STListener)listener).enterProgram_variable_declaration_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof STListener ) ((STListener)listener).exitProgram_variable_declaration_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof STVisitor ) return ((STVisitor<? extends T>)visitor).visitProgram_variable_declaration_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Program_variable_declaration_blockContext program_variable_declaration_block() throws RecognitionException {
		Program_variable_declaration_blockContext _localctx = new Program_variable_declaration_blockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_program_variable_declaration_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR_ACCESS) {
				{
				setState(114);
				access_variable_declaration_block();
				}
			}

			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(117);
				local_variable_declaration_block();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_declarationContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(STParser.FUNCTION, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public Type_specificationContext type_specification() {
			return getRuleContext(Type_specificationContext.class,0);
		}
		public Function_variable_declaration_blocksContext function_variable_declaration_blocks() {
			return getRuleContext(Function_variable_declaration_blocksContext.class,0);
		}
		public StatementListContext statementList() {
			return getRuleContext(StatementListContext.class,0);
		}
		public TerminalNode END_FUNCTION() { return getToken(STParser.END_FUNCTION, 0); }
		public Function_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof STListener ) ((STListener)listener).enterFunction_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof STListener ) ((STListener)listener).exitFunction_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof STVisitor ) return ((STVisitor<? extends T>)visitor).visitFunction_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_declarationContext function_declaration() throws RecognitionException {
		Function_declarationContext _localctx = new Function_declarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(FUNCTION);
			setState(121);
			identifier();
			setState(122);
			match(T__0);
			setState(123);
			type_specification();
			setState(124);
			function_variable_declaration_blocks();
			setState(125);
			statementList();
			setState(126);
			match(END_FUNCTION);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Local_variable_declaration_blockContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(STParser.VAR, 0); }
		public TerminalNode END_VAR() { return getToken(STParser.END_VAR, 0); }
		public List<Variable_declarationContext> variable_declaration() {
			return getRuleContexts(Variable_declarationContext.class);
		}
		public Variable_declarationContext variable_declaration(int i) {
			return getRuleContext(Variable_declarationContext.class,i);
		}
		public Local_variable_declaration_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_local_variable_declaration_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof STListener ) ((STListener)listener).enterLocal_variable_declaration_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof STListener ) ((STListener)listener).exitLocal_variable_declaration_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof STVisitor ) return ((STVisitor<? extends T>)visitor).visitLocal_variable_declaration_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Local_variable_declaration_blockContext local_variable_declaration_block() throws RecognitionException {
		Local_variable_declaration_blockContext _localctx = new Local_variable_declaration_blockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_local_variable_declaration_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(VAR);
			setState(130); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(129);
				variable_declaration();
				}
				}
				setState(132); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IDENTIFIER );
			setState(134);
			match(END_VAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_variable_declaration_blocksContext extends ParserRuleContext {
		public List<Function_variable_declaration_blockContext> function_variable_declaration_block() {
			return getRuleContexts(Function_variable_declaration_blockContext.class);
		}
		public Function_variable_declaration_blockContext function_variable_declaration_block(int i) {
			return getRuleContext(Function_variable_declaration_blockContext.class,i);
		}
		public Function_variable_declaration_blocksContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_variable_declaration_blocks; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof STListener ) ((STListener)listener).enterFunction_variable_declaration_blocks(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof STListener ) ((STListener)listener).exitFunction_variable_declaration_blocks(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof STVisitor ) return ((STVisitor<? extends T>)visitor).visitFunction_variable_declaration_blocks(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_variable_declaration_blocksContext function_variable_declaration_blocks() throws RecognitionException {
		Function_variable_declaration_blocksContext _localctx = new Function_variable_declaration_blocksContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_function_variable_declaration_blocks);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << VAR_INPUT) | (1L << VAR_OUTPUT) | (1L << VAR_IN_OUT))) != 0)) {
				{
				{
				setState(136);
				function_variable_declaration_block();
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_variable_declaration_blockContext extends ParserRuleContext {
		public Variable_declaration_typeContext variable_declaration_type() {
			return getRuleContext(Variable_declaration_typeContext.class,0);
		}
		public TerminalNode END_VAR() { return getToken(STParser.END_VAR, 0); }
		public List<Variable_declarationContext> variable_declaration() {
			return getRuleContexts(Variable_declarationContext.class);
		}
		public Variable_declarationContext variable_declaration(int i) {
			return getRuleContext(Variable_declarationContext.class,i);
		}
		public Function_variable_declaration_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_variable_declaration_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof STListener ) ((STListener)listener).enterFunction_variable_declaration_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof STListener ) ((STListener)listener).exitFunction_variable_declaration_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof STVisitor ) return ((STVisitor<? extends T>)visitor).visitFunction_variable_declaration_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_variable_declaration_blockContext function_variable_declaration_block() throws RecognitionException {
		Function_variable_declaration_blockContext _localctx = new Function_variable_declaration_blockContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_function_variable_declaration_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			variable_declaration_type();
			setState(144); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(143);
				variable_declaration();
				}
				}
				setState(146); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IDENTIFIER );
			setState(148);
			match(END_VAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_declaration_typeContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(STParser.VAR, 0); }
		public TerminalNode VAR_INPUT() { return getToken(STParser.VAR_INPUT, 0); }
		public TerminalNode VAR_OUTPUT() { return getToken(STParser.VAR_OUTPUT, 0); }
		public TerminalNode VAR_IN_OUT() { return getToken(STParser.VAR_IN_OUT, 0); }
		public Variable_declaration_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_declaration_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof STListener ) ((STListener)listener).enterVariable_declaration_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof STListener ) ((STListener)listener).exitVariable_declaration_type(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof STVisitor ) return ((STVisitor<? extends T>)visitor).visitVariable_declaration_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Variable_declaration_typeContext variable_declaration_type() throws RecognitionException {
		Variable_declaration_typeContext _localctx = new Variable_declaration_typeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_variable_declaration_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << VAR_INPUT) | (1L << VAR_OUTPUT) | (1L << VAR_IN_OUT))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Access_variable_declaration_blockContext extends ParserRuleContext {
		public TerminalNode VAR_ACCESS() { return getToken(STParser.VAR_ACCESS, 0); }
		public TerminalNode END_VAR() { return getToken(STParser.END_VAR, 0); }
		public List<Access_variable_declarationContext> access_variable_declaration() {
			return getRuleContexts(Access_variable_declarationContext.class);
		}
		public Access_variable_declarationContext access_variable_declaration(int i) {
			return getRuleContext(Access_variable_declarationContext.class,i);
		}
		public Access_variable_declaration_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_access_variable_declaration_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof STListener ) ((STListener)listener).enterAccess_variable_declaration_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof STListener ) ((STListener)listener).exitAccess_variable_declaration_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof STVisitor ) return ((STVisitor<? extends T>)visitor).visitAccess_variable_declaration_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Access_variable_declaration_blockContext access_variable_declaration_block() throws RecognitionException {
		Access_variable_declaration_blockContext _localctx = new Access_variable_declaration_blockContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_access_variable_declaration_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(VAR_ACCESS);
			setState(154); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(153);
				access_variable_declaration();
				}
				}
				setState(156); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IDENTIFIER );
			setState(158);
			match(END_VAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
